--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>Welcome to</h1>
+    <h1>Peter Parker Resume</h1>
 </body>
 </html>
