top banner in Top section added

--- a/index.html
+++ b/index.html
@@ -5,14 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Developer Portfolio</title>
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Tinos&display=swap" rel="stylesheet"> 
     <!--ADD faavicon herelink rel="shortcut icon" href="favicon.ico" type="image/x-icon"-->
-    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welcome to</h1>
-    <h1>Peter Parker Resume! </h1>
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome to</h1>
+            <h1><span class="orange-color">Peter Parker</span> Resume!</h1>
+            <h3>ANYTHING climber & Sinister Stopper</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem minima harum repellendus dolorum quidem ex soluta quasi necessitatibus, tempora cumque incidunt ipsum quaerat nostrum eveniet consequatur fuga nisi tenetur id eos est quod dolores veniam aut? Officia, quas temporibus eveniet ipsa nam ipsum. Veniam doloremque debitis harum eveniet, dolores laudantium autem voluptatibus quis fugit. Incid deserunt error.</p>
+            <a class="link-button" target="_blank" href="https://github.com/Pro-prgrmHero">HiRE ME</a>
+        </div>
+        <div class="half-width">
+            <img src="images/my-bg.png" alt="1st image">
+        </div>
+    </section>
+    </html>
 </body>
-</html>
