second section finished

--- a/index.html
+++ b/index.html
@@ -17,11 +17,26 @@
             <h1>Welcome to</h1>
             <h1><span class="orange-color">Peter Parker</span> Resume!</h1>
             <h3>ANYTHING climber & Sinister Stopper</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem minima harum repellendus dolorum quidem ex soluta quasi necessitatibus, tempora cumque incidunt ipsum quaerat nostrum eveniet consequatur fuga nisi tenetur id eos est quod dolores veniam aut? Officia, quas temporibus eveniet ipsa nam ipsum. Veniam doloremque debitis harum eveniet, dolores laudantium autem voluptatibus quis fugit. Incid deserunt error.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem minima harum repellendus dolorum quidem ex soluta quasi necessitatibus, tempora cumque incidunt ipsum quaerat nostrum eveniet consequatur fuga nisi tenetur id eos est quod dolores veniam aut? Officia, quas temporibus eveniet ipsa nam ipsum. Veniam doloremque debitis harum eveniet, dolores laudantium autem voluptatibus quis fugit. Incid deserunt error.</p><br><br>
             <a class="link-button" target="_blank" href="https://github.com/Pro-prgrmHero">HiRE ME</a>
         </div>
         <div class="half-width">
             <img src="images/my-bg.png" alt="1st image">
+        </div>
+    </section>
+    <!--2nd sec tion DREAM;( bigg-->
+    <section class="dream-big">
+        <!-- <div class="middle-banner">
+            <img src="images/S8_HR-1000x1000.png" alt="design round Shape">
+        </div> -->
+        <div class="half-width">
+            <img src="images/my-bg2.png" alt="2nd background image">
+        </div>
+        <div class="half-width">
+            <h1>|Dream Big|</h1>
+            <h2>Become a Web Expert</h2>
+            <p class="para1n2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem minima harum repellendus dolorum quidem ex soluta quasi necessitatibus, tempora cumque incidunt ipsum quaerat nostrum eveniet consequatur fuga nisi tenetur id eos est quod dolores veniam aut? Officia, quas temporibus eveniet ipsa nam ipsum. Veniam doloremque debitis harum eveniet, dolores laudantium autem voluptatibus quis fugit. Incid deserunt error.</p><br><br>
+            <a class="link-button" target="_blank" href="https://pro-prgrmhero.github.io/dev-portfolio/">Download Resume</a>
         </div>
     </section>
     </html>
