--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!--ADD faavicon herelink rel="shortcut icon" href="favicon.ico" type="image/x-icon"-->
 </head>
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Welcome to</h1>
             <h1><span class="orange-color">Peter Parker</span> Resume!</h1>
@@ -25,7 +25,7 @@
         </div>
     </section>
     <!--2nd sec tion DREAM;( bigg-->
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <!-- <div class="middle-banner">
             <img src="images/S8_HR-1000x1000.png" alt="design round Shape">
         </div> -->
@@ -38,6 +38,22 @@
             <p class="para1n2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem minima harum repellendus dolorum quidem ex soluta quasi necessitatibus, tempora cumque incidunt ipsum quaerat nostrum eveniet consequatur fuga nisi tenetur id eos est quod dolores veniam aut? Officia, quas temporibus eveniet ipsa nam ipsum. Veniam doloremque debitis harum eveniet, dolores laudantium autem voluptatibus quis fugit. Incid deserunt error.</p><br><br>
             <a class="link-button" target="_blank" href="https://pro-prgrmhero.github.io/dev-portfolio/">Download Resume</a>
         </div>
+    </section>
+    <section class="experiencce-area">
+        <h1>Experiences</h1>
+        <div class="flexible-container">
+            <div class="half-width">
+                <h1>Full Stack Web Developer</h1>
+                <h3>2020 to Presnt | Pro level professional dev</h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div class="half-width">
+            <div>
+                <h1>Baby Web Developer</h1>
+                <h3>2000 - 2020 | Programming Apprentice</h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+            </div>
+        </div>
+        <p></p>
     </section>
     </html>
 </body>
